[MUX] refers to code by (or inspired by) TinyMUX 2.x
[Rhost] refers to code by (or inspired by) RhostMUSH

==========================================================================

Version 1.8.4 patchlevel 7                                 ??? ??, 2011

Minor changes:
 * Rewrite memcheck allocation tracking to use a more efficient data
   structure. [SW]
 * Help file improvements. [SW]

Fixes:
 * Verified that Penn compiles using the clang compiler, and fix a few
   warnings it generated. [SW]
 * Better fix for the DBREFLIST issue fixed in p6. [SW]

Version 1.8.4 patchlevel 6                                 Jul 29,  2011

Minor changes:
 * Clean up the linux inotify file monitoring code a bit. [SW]
 * @forwardlist can be inherited (But defaults to no-inherit). Suggested
   by Padraic.
 * @pemit/port now takes the /list switch, to pemit multiple ports at once.
   Suggested by Padraic. [MG]
 * When you 'register' a character at the connect screen, you can re-use the
   command to send a new password to the same email address, as long as you
   haven't connected yet. Suggested by Minion. [MG]
 * @odescribe/@adescribe are no longer triggered when a Terse player moves
   into a room, as he doesn't see the @describe. Suggested by Padraic. [MG]
 * exit-oneway and exit-multiple warning checks now take global exits
   into account. Suggested by Padraic and qa'toq. [SW]

Functions:
 * valid() can be used with the 'qreg' category to check if a string
   is a valid q-register name.  [SW]
 * crecall() now returns an error when given an invalid channel, and no
   longer returns an error when used on a channel with nothing to recall.
   Suggested by Trinsec. [MG]
 * Added uptime(), which returns much of the information from @uptime.
   From a suggestion by Jules. [MG]
 * quota() now accepts 'me' as an argument. Suggested by Padraic. [MG]
 * remove() is now ANSI-aware. [MG]
 * money() now checks for an integer argument before checking for an object.
   Suggested by qa'toq. [MG]