@@ -22,6 +22,8 @@ Minor changes:
  * Rewrite memcheck allocation tracking to use a more efficient data
    structure. [SW]
  * Help file improvements. [SW]
+ * @decompile now uses '&attr obj=value', even for standard attributes, to
+   avoid possible clashes with command names. Suggested by Mercutio. [MG]
 
 Fixes:
  * Verified that Penn compiles using the clang compiler, and fix a few
